[package]
name = "loud_cord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_repr = "0.1.18"
serde_json = "1.0.115"
tiny_http = "0.12.0"
reqwest = "0.12.2"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
async-trait = "0.1.79"